jenkins/4.servie-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  type: LoadBalancer
  ports:
    - name: web
      port: 8080
      protocol: TCP
    - name: agent
      port: 50000
      protocol: TCP
